force-app/main/default/objects/Articolo__c/fields/Allegato_1__c.field-meta.xml
<CustomField>
    <fullName>Allegato_1__c</fullName>
    <description>Url o riferimento dell&apos;articolo</description>
    <inlineHelpText>Url o riferimento dell&apos;articolo</inlineHelpText>
    <label>Allegato 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>