force-app/main/default/objects/Articolo__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Area per la classificazione dell&apos;articolo</description>
    <inlineHelpText>Area per la classificazione dell&apos;articolo</inlineHelpText>
    <label>Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Permessi_Visualizzazione</valueSetName>
    </valueSet>
</CustomField>