force-app/main/default/objects/Articolo__c/fields/Contenuto__c.field-meta.xml
<CustomField>
    <fullName>Contenuto__c</fullName>
    <description>Contenuto dell&apos;articolo</description>
    <inlineHelpText>Contenuto dell&apos;articolo</inlineHelpText>
    <label>Contenuto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>