force-app/main/default/objects/Articolo__c/fields/Data_Ora_Notifica__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Notifica__c</fullName>
    <description>Data di notifica della notifica per gli utenti</description>
    <inlineHelpText>Quando si vuole notificare questo articolo agli utenti</inlineHelpText>
    <label>Data Ora Notifica</label>
    <type>DateTime</type>
</CustomField>