force-app/main/default/objects/Articolo__c/fields/Data_Ora_Pubblicazione__c.field-meta.xml
<CustomField>
    <fullName>Data_Ora_Pubblicazione__c</fullName>
    <description>Data in cui l&apos;articolo deve essere pubblicato</description>
    <inlineHelpText>Data in cui l&apos;articolo deve essere pubblicato</inlineHelpText>
    <label>Data Ora Pubblicazione</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>