force-app/main/default/objects/Articolo__c/fields/Genitore__c.field-meta.xml
<CustomField>
    <fullName>Genitore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Articolo correlato</description>
    <inlineHelpText>Collegandolo ad un articolo padre creo un raggruppamento di articoli</inlineHelpText>
    <label>Genitore</label>
    <referenceTo>Articolo__c</referenceTo>
    <relationshipLabel>Articoli</relationshipLabel>
    <relationshipName>Articoli</relationshipName>
    <type>Lookup</type>
</CustomField>