force-app/main/default/objects/Articolo__c/fields/In_Evidenza_Fino_A__c.field-meta.xml
<CustomField>
    <fullName>In_Evidenza_Fino_A__c</fullName>
    <description>Data ed ora fino a quando l&apos;articolo dev&apos;essere messo in evidenza. L&apos;articolo verrà considerato in evidenza solo se la data è stata impostata.</description>
    <inlineHelpText>Data ed ora fino a quando l&apos;articolo dev&apos;essere messo in evidenza. L&apos;articolo verrà considerato in evidenza solo se la data è stata impostata.</inlineHelpText>
    <label>In Evidenza Fino A</label>
    <type>DateTime</type>
</CustomField>