force-app/main/default/objects/Articolo__c/fields/Link_Immagine_Di_Copertina__c.field-meta.xml
<CustomField>
    <fullName>Link_Immagine_Di_Copertina__c</fullName>
    <label>Link Immagine Di Copertina</label>
    <type>Url</type>
</CustomField>