force-app/main/default/objects/Articolo__c/fields/Sottotitolo__c.field-meta.xml
<CustomField>
    <fullName>Sottotitolo__c</fullName>
    <description>Eventuale sottotitolo</description>
    <inlineHelpText>Eventuale sottotitolo</inlineHelpText>
    <label>Sottotitolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>