force-app/main/default/objects/Articolo__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Tag dell&apos;articolo separati da virgola</description>
    <inlineHelpText>Tag dell&apos;articolo separati da virgola</inlineHelpText>
    <label>Tag</label>
    <type>TextArea</type>
</CustomField>