force-app/main/default/objects/Articolo__c/fields/Titolo__c.field-meta.xml
<CustomField>
    <fullName>Titolo__c</fullName>
    <description>Titolo dell&apos;articolo</description>
    <inlineHelpText>Inserire il titolo dell&apos;articolo</inlineHelpText>
    <label>Titolo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>