force-app/main/default/objects/Articolo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Ora_Notifica__c</columns>
    <columns>Data_Ora_Pubblicazione__c</columns>
    <columns>Titolo__c</columns>
    <columns>Tag__c</columns>
    <columns>Tipologia__c</columns>
    <columns>AbilitaLike__c</columns>
    <columns>Immagine_Di_Copertina__c</columns>
    <columns>Impostazione_Commenti__c</columns>
    <columns>Link_Immagine_Di_Copertina__c</columns>
    <columns>Riassunto__c</columns>
    <columns>In_Evidenza_Fino_A__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>